QPID-8581: [Broker-J] Removed unnecessary imports (#148)